--- a/style.css
+++ b/style.css
@@ -10,10 +10,7 @@ h1 {
     text-shadow: 1px 1px 4px black;
     background-color: lightskyblue;
     opacity: 0.8;
-    justify-content: center;
-    
-    
-    
+    justify-content: center;   
 }
 
 h2 {
@@ -28,6 +25,11 @@ h3 {
     text-shadow: 1px 1px 4px black;
     background-color: lightskyblue;
     opacity: 0.8;
+    background-position: center;
+    background-size: cover;
+    background-size: contain;
+    background-size: 50%;
+    
 }
 
 ul {
