--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@ img.avatar {
     height: 10%;
     width: 30%;
     border-radius: 50%;
+    padding: 20px 100px 20px 100px;
+}
 
+div.TituloSub {
+    padding: 50px 150px 50px 10px;
 }
 
 h1 {
@@ -10,7 +14,7 @@ h1 {
     text-shadow: 1px 1px 4px black;
     background-color: lightskyblue;
     opacity: 0.8;
-    justify-content: center;   
+    padding: 0px 0px 0px 0px;   
 }
 
 h2 {
