adaptando site do restaurante

--- a/restcheiroderoça/CSS/stylecardapio.css
+++ b/restcheiroderoça/CSS/stylecardapio.css
@@ -95,7 +95,7 @@ div.quartodecirculo {
 
 .textosobre {
     margin-top: 200px;
-    background-image: url('/images/knife-2879371_1920.jpg');
+    background-image: url('/restcheiroderoça/images/knife-2879371_1920.jpg');
     background-position: 50%;
     background-size: contain;
     background-position-x: center;
