tirando o cedilha do link

--- a/restcheiroderoca/CSS/style.css
+++ b/restcheiroderoca/CSS/style.css
@@ -117,6 +117,6 @@ video {
     width: 360px;
     margin-bottom: 250px;
     border: 30px solid transparent;
-    border-image: url('/restcheiroderoça/images/madeira.jpg') 60 round;
+    border-image: url('/restcheiroderoca/images/madeira.jpg') 60 round;
     margin-left: 80px;
 }
